Fix related title overflow

--- a/_scss/custom.scss
+++ b/_scss/custom.scss
@@ -79,7 +79,6 @@
 }
 
 .related-title {
-  @extend .row;
   @extend .text-center;
 
   padding: 3rem 0;
